# quantitative

./: .gitignore  README.md  configure.ac  quant.sh  setup.sh
src/: Makefile.am  function.cpp  function.h  make.sh  quant.cpp  term.cpp  term.h  util.cpp  util.h
